log[E0999].txt
error[E0999]: unsupported statement
    --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/iter/traits/iterator.rs:3010:21
     |
3010 |                     *acc += 1;
     |                     ^^^^^^^^^
     |
     = note: unsupported binary op `AddWithOverflow`

error[E0999]: assertion might fail: possible division by zero
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/fmt/num.rs:729:9
    |
729 |         ((n >> 19) as u64 / (DIV >> 19)) as u128
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/fmt/num.rs:734:15
    |
734 |     let rem = (n - quot * DIV as u128) as u64;
    |               ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: assertion might fail: possible out-of-bounds access
  --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/memchr.rs:41:12
   |
41 |         if text[i] == x {
   |            ^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/memchr.rs:147:31
    |
147 |             let u = *(ptr.add(offset - 2 * chunk_bytes) as *const Chunk);
    |                               ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/memchr.rs:148:31
    |
148 |             let v = *(ptr.add(offset - chunk_bytes) as *const Chunk);
    |                               ^^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/memchr.rs:157:9
    |
157 |         offset -= 2 * chunk_bytes;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/memchr.rs:129:24
    |
129 |         (prefix.len(), len - suffix.len())
    |                        ^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
  --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/stable/drift.rs:66:17
   |
66 |                 scan_idx - prev_run.len(),
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/stable/drift.rs:161:5
    |
161 |     ((1 << 62) + n as u64 - 1) / n as u64
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: assertion might fail: possible division by zero
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/stable/drift.rs:161:5
    |
161 |     ((1 << 62) + n as u64 - 1) / n as u64
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: assertion might fail: possible division by zero
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/stable/mod.rs:100:26
    |
100 |     let max_full_alloc = MAX_FULL_ALLOC_BYTES / mem::size_of::<T>();
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:188:17
    |
188 |         if k == v.len() - 1 {
    |                 ^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:237:32
    |
237 |         ninther(v, is_less, a, i - frac, b, a + 1, i, b + 1, a + 2, i + frac, b + 2);
    |                                ^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:231:14
    |
231 |     let lo = v.len() / 2 - pivot;
    |              ^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:233:15
    |
233 |     let gap = (v.len() - 9 * frac) / 4;
    |               ^^^^^^^^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:234:17
    |
234 |     let mut a = lo - 4 * frac - gap;
    |                 ^^^^^^^^^^^^^

error[E0999]: arithmetic operation may overflow
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:234:17
    |
234 |     let mut a = lo - 4 * frac - gap;
    |                 ^^^^^^^^^^^^^^^^^^^

error[E0999]: assertion might fail: possible out-of-bounds access
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:302:17
    |
302 |     if is_less(&v[c], &v[a]) {
    |                 ^^^^

error[E0999]: assertion might fail: possible out-of-bounds access
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:302:24
    |
302 |     if is_less(&v[c], &v[a]) {
    |                        ^^^^

error[E0999]: assertion might fail: possible out-of-bounds access
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/sort/select.rs:305:24
    |
305 |     if is_less(&v[c], &v[b]) {
    |                        ^^^^

error[E0999]: assertion might fail: possible out-of-bounds access
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/ascii.rs:499:21
    |
499 |         is_ascii &= bytes[i].is_ascii();
    |                     ^^^^^^^^

error[E0999]: assertion might fail: possible out-of-bounds access
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/ascii.rs:486:22
    |
486 |             count += bytes[i].is_ascii() as u8;
    |                      ^^^^^^^^

error[E0999]: assertion might fail: possible division by zero
   --> /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/slice/rotate.rs:163:41
    |
163 |             && cmp::min(left, right) <= mem::size_of::<BufType>() / mem::size_of::<T>()
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


thread 'rustc' panicked at crates/flux-infer/src/infer.rs:378:73:
called `Option::unwrap()` on a `None` value
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
note: uncaught panic [def_id: DefId(0:13424 ~ core[8058]::str::count::do_count_chars), span: /Users/Exelica/Downloads/project/flux-verify-std/library/core/src/str/count.rs:40:1: 40:36 (#0)]

error: could not compile `core` (lib) due to 24 previous errors
